# BTLE

./: .cowcoin  .gitignore  .gitmodules  LICENSE  NOTICE  README.md  compatible_hackrf_bladerf_lib.txt
.github/ISSUE_TEMPLATE/: issue-template.md
doc/: README
firmware/: btle_ll.c  compile.sh
fpga/: README.md  btle_rf_init.sh  build-adi-ip.sh  fpga_bit_bin_gen.sh
fpga/antsdr/: btle.sh  btle.tcl  devicetree.dtb  devicetree.dts
fpga/antsdr/src/: system.bd  system.xdc  system_no_ila.xdc  system_top.v  system_wrapper.v
fpga/antsdr_e200/: btle.tcl  devicetree.dtb  devicetree.dts
fpga/antsdr_e200/src/: system.bd  system.xdc  system_no_ila.xdc  system_top.v  system_wrapper.v
fpga/boards/sdrpi/: btle.tcl
fpga/boards/sdrpi/src/: ccbob_constr.xdc  sdrpi_constr.xdc  sdrpi_constr_lvds.xdc  system.bd  system.xdc
fpga/helpers/: BOOT_BIN_gen.sh  ad9361_fir_smpl8M_pass0.8_stop1.1.ftr  all_gen_and_scp.sh  btle_rf_init_wideband_no_fir_no_tx.sh  devicetree.dtb  fir.sh  fpga_bit_bin_gen.sh  fpga_top.bif  save_fpga_img_ila.sh  update_BOOT_partition.sh
fpga/sdrpi/: btle.tcl  devicetree.dtb  devicetree.dts  devicetree_gen.sh
fpga/sdrpi/helpers/: BOOT_BIN_gen.sh  all_gen_and_scp.sh  btle_rf_init.sh  devicetree.dtb  devicetree.dts  flash_fpga_in_linux.sh  fpga_bit_bin_gen.sh  save_fpga_img_ila.sh  update_BOOT_partition.sh
fpga/sdrpi/src/: ccbob_constr.xdc  sdrpi_constr.xdc  sdrpi_constr_lvds.xdc  system.bd  system.xdc  system_no_ila.xdc  system_ooc.xdc  system_top.v  system_wrapper.v
host/: CMakeLists.txt
host/ble_fpga_ctl/: bin_file_to_iq.m  ble_fpga_ctl.c  ble_send_cmd.c  compile.sh  register_file_for_tx_test.txt  test_register_file_gen.py  test_rx_iq_show.m  test_rx_iq_show.py  water_fall.m
host/btle-tools/: CMakeLists.txt  btle_rx.c  btle_tx.c  common_misc.c  common_misc.h
host/btle-tools/btle_lib/: btle_lib.c  btle_lib.h  scramble_table.h  scramble_table_ch37.h
host/btle-tools/include/: common.h.in
host/btle-tools/rf_driver/: .gitignore  CMakeLists.txt  rf_driver.h.in  rf_driver_bladerf.c  rf_driver_bladerf.h  rf_driver_hackrf.c  rf_driver_hackrf.h  rf_driver_top.c  rf_driver_top.h  rf_driver_usrp.c  rf_driver_usrp.h  rf_probe.c  test_rf_probe.c
host/btle-tools/src/: CMakeLists.txt  btle_json.c  btle_json.h  btle_rx.c  btle_rx.c_bak1  btle_rx.c_bak2  btle_rx.c_bak3_buffer_synched  btle_tx.c  common.h  gauss_cos_sin_table.h  packets.txt  packets_discovery.txt  packets_ibeacon.txt  scramble_table.h  scramble_table_ch37.h
host/btle-tools/tx_pkt_example/: packets.txt  packets_discovery.txt
host/cmake/modules/: FindLIBBLADERF.cmake  FindLIBHACKRF.cmake  FindUHD.cmake
host/hackrf-tools/: CMakeLists.txt
host/hackrf-tools/src/: CMakeLists.txt  btle_tx.c
host/python/btle_cli/: .gitignore  README.md  pyproject.toml
host/python/btle_cli/docs/: MCP.md
host/python/btle_cli/src/btle_cli/: __init__.py  __main__.py  aggregate.py  analyze.py  cli.py  events.py  mcp_server.py  oui.py  pcap_loader.py  recon.py  rx_proc.py  tx_builder.py  tx_proc.py  vendors.py
host/python/btle_cli/src/btle_cli/tui/: __init__.py  app.py
host/python/btle_cli/src/btle_cli/tui/screens/: analyze.py  capture_live.py  capture_select.py  device_detail.py  scan.py
host/python/btle_cli/tests/: test_events.py  test_pcap_loader.py  test_recon.py  test_rx_proc.py  test_tx_builder.py
host/python/btle_cli/tests/fixtures/: sample.ndjson
matlab/: get_number.m  get_number1.m  get_signal_from_hackrf_bin.m  save_int_var_for_c.m  save_int_var_for_c_2d.m  scramble_gen.m  test_btle_rx.m  test_fixed_point.m  test_float_point.m  test_scramble_gen_all_channel.m
open_btle_baseband_chip/: README.md  open_btle_baseband_chip.md
python/: backup_script.py  btlelib.py  test_alignment_with_btle_sdr.py  test_btle_ber.py  test_btle_rx_by_captured_iq.py  test_vector_for_btle_verilog.py
usrp_replay_example/: IQ_sample_for_matlab.txt  README.md  gen_float32_bin_for_usrp_replay.m  replay_for_btle_4Msps.grc  welcom_packets_discovery.txt
verilog/: auxiliary_daemon.v  bit_repeat_upsample.v  bit_repeat_upsample_tb.v  bit_repeat_upsample_test_input.txt  btle_controller.sh  btle_controller.tcl  btle_controller.v  btle_controller.xdc  btle_controller_tb.v  btle_controller_wrapper.v  btle_controller_wrapper.xdc  btle_ll.v  btle_ll_stub.v  btle_phy.v  btle_rx.v  btle_rx_core.v  btle_rx_core_tb.v  btle_rx_tb.v  btle_tx.v  btle_tx_tb.v  clock_domain_conversion_iq.v  crc24.v  crc24_core.v  crc24_tb.v  dpram.v  gauss_filter.v  gauss_filter_tb.v  gfsk_demodulation.v  gfsk_demodulation_tb.v  gfsk_modulation.v  rx_clk_gen.v  scramble.v  scramble_core.v  scramble_tb.v  sdpram_one_clk.v  sdpram_two_clk.v  sdpram_two_clk_xilinx.v  search_unique_bit_sequence.v  search_unique_bit_sequence_tb.v  serial_in_ram_out.v  (+6 more)
